# gx-ra-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml
docs/: MVP-INVENTORY.md  RASPBERRY-PI-QUICKSTART.md  TIMEWARP-POC.md  UBUNTU-VM-QUICKSTART.md  VEEAM-PILOT.md  WINDOWS-VM-QUICKSTART.md  gxra-agent-deployment-modes.md  timewarp-kit-linux-app-target.json  timewarp-ubuntu24-worker-target.json
gxra/: __init__.py
gxra/agent/: __init__.py  __main__.py  bsr_merkle.py  cli.py  client.py  collector.py  config.py  genome_slots.py  platform.py  virtualization.py
gxra/agent/collectors/: __init__.py  common.py  darwin.py  linux.py  security_posture.py  windows.py
gxra/agent/signals/: __init__.py  strategy.py
gxra/timewarp/: __init__.py  api_client.py  cli.py  runtime_verify.py
packaging/: gxra-agent.spec
scripts/: benchmark-agent-overhead.sh  build-offline-bundle.sh  build_agent.sh  db_state_holder.py  deploy-linux-agent.sh  gxra-recovery-ingest.sh  gxra-timewarp  gxra_e2e_demo.sh  gxra_e2e_windows.bat  gxra_e2e_windows.sh  gxra_fleet_e2e.sh  gxra_vm_upgrade.sh  install-from-zip.bat  install-periodic-task.ps1  install-periodic-timer.sh  install-windows.ps1  linux-synthetic-drift-lab.sh  run-install.bat  simulate-veeam-backup.sh  timewarp-criu-poc.sh  timewarp_target.c  timewarp_target.py
tests/: test_e2e_deny.py  test_e2e_pilot.py  test_linux_posture.py  test_platform.py  test_timewarp_api_client.py  test_timewarp_runtime_verify.py
